feat(bootstrap): add runtime auto-download and expand common gitignore
Why this change was needed:
Manual runtime binary setup was error-prone and local runtime artifacts were
polluting repository status.

What changed:
- Added automated CLIProxyAPIPlus download and LiteLLM runner generation
- Expanded `.gitignore` for runtime/cache/local-secret artifacts

Problem solved:
Runtime setup became repeatable and repository cleanliness improved.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# OS/editor clutter
+.DS_Store
+Thumbs.db
+tags
+*.swp
+*.swo
+.idea/
+.vscode/
+
 # Python-generated files
 __pycache__/
 *.py[oc]
@@ -5,6 +14,24 @@ build/
 dist/
 wheels/
 *.egg-info
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+htmlcov/
 
-# Virtual environments
-.venv
+# Virtual environments / tool cache
+.venv/
+.uv-cache/
+
+# Local runtime artifacts
+runtime/
+logs/
+auth/
+*.log
+*.pid
+
+# Local-only config/secrets
+.env
+.env.*
+config/routertool.yaml
