--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,17 @@ name = "llm-router"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 dependencies = []
 
 [project.scripts]
 llm-router = "llm_router:main"
+
+[dependency-groups]
+test = [
+    "pytest>=8.3.0,<9",
+    "pytest-cov>=5.0.0,<6",
+]
 
 [build-system]
 requires = ["uv_build>=0.10.2,<0.11.0"]
