fix(config): resolve service working-directory path mismatches for cliproxyapi
Why this change was needed:
Service startup failed in certain layouts because relative paths were resolved
from inconsistent working directories.

What changed:
- Corrected config path and working-directory assumptions for cliproxy service
- Updated related runtime command behavior and docs/examples

Problem solved:
Cliproxy service starts reliably with expected file resolution.

--- a/config/examples/routertool.yaml
+++ b/config/examples/routertool.yaml
@@ -11,6 +11,7 @@
       "port": 4000,
       "health_path": "/healthz",
       "command": {
+        "cwd": ".",
         "args": ["runtime/bin/litellm", "--config", "runtime/litellm.active.yaml"]
       }
     },
@@ -19,7 +20,8 @@
       "port": 8317,
       "health_path": "/healthz",
       "command": {
-        "args": ["runtime/bin/CLIProxyAPIPlus", "-config", "config/cliproxyapi.yaml"]
+        "cwd": ".",
+        "args": ["runtime/bin/CLIProxyAPIPlus", "-config", "cliproxyapi.yaml"]
       }
     }
   },
