refactor(layout): move runtime artifacts to .router and align defaults
Why this change was needed:
Tracked config templates and generated runtime files were mixed together,
making repository layout harder to reason about.

What changed:
- Moved runtime defaults to `.router/`-based structure
- Updated default auth destination resolution and related docs/tests

Problem solved:
Repository structure now cleanly separates templates from generated runtime data.

--- a/config/examples/routertool.yaml
+++ b/config/examples/routertool.yaml
@@ -1,9 +1,9 @@
 {
   "paths": {
-    "runtime_dir": "runtime",
-    "active_config": "runtime/litellm.active.yaml",
-    "state_file": "runtime/state.json",
-    "log_file": "logs/routerctl.log"
+    "runtime_dir": "../.router/runtime",
+    "active_config": "../.router/runtime/litellm.active.yaml",
+    "state_file": "../.router/runtime/state.json",
+    "log_file": "../.router/logs/routerctl.log"
   },
   "services": {
     "litellm": {
@@ -11,8 +11,8 @@
       "port": 4000,
       "health_path": "/healthz",
       "command": {
-        "cwd": ".",
-        "args": ["runtime/bin/litellm", "--config", "runtime/litellm.active.yaml"]
+        "cwd": "..",
+        "args": [".router/runtime/bin/litellm", "--config", ".router/runtime/litellm.active.yaml"]
       }
     },
     "cliproxyapi_plus": {
@@ -20,8 +20,8 @@
       "port": 8317,
       "health_path": "/healthz",
       "command": {
-        "cwd": ".",
-        "args": ["runtime/bin/CLIProxyAPIPlus", "-config", "cliproxyapi.yaml"]
+        "cwd": "..",
+        "args": [".router/runtime/bin/CLIProxyAPIPlus", "-config", "config/cliproxyapi.yaml"]
       }
     }
   },
@@ -92,7 +92,7 @@
     }
   },
   "secret_files": [
-    "auth/codex.json",
-    "auth/copilot.json"
+    "../.router/auths/codex.json",
+    "../.router/auths/copilot.json"
   ]
 }
