--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = []
 llm-router = "llm_router:main"
 
 [dependency-groups]
+runtime = [
+    "litellm[proxy]==1.75.8",
+]
 test = [
     "pytest>=8.3.0,<9",
     "pytest-cov>=5.0.0,<6",
