--- a/config/examples/routertool.yaml
+++ b/config/examples/routertool.yaml
@@ -1,4 +1,5 @@
 {
+  "config_version": 2,
   "paths": {
     "runtime_dir": "../.router/runtime",
     "active_config": "../.router/runtime/litellm.active.yaml",
