--- a/config/examples/routertool.yaml
+++ b/config/examples/routertool.yaml
@@ -10,7 +10,7 @@
     "litellm": {
       "host": "127.0.0.1",
       "port": 4000,
-      "health_path": "/healthz",
+      "readiness_path": "/v1/models",
       "command": {
         "cwd": "..",
         "args": [".router/runtime/bin/litellm", "--config", ".router/runtime/litellm.active.yaml"]
@@ -19,7 +19,7 @@
     "cliproxyapi_plus": {
       "host": "127.0.0.1",
       "port": 8317,
-      "health_path": "/healthz",
+      "readiness_path": "/v1/models",
       "command": {
         "cwd": "..",
         "args": [".router/runtime/bin/CLIProxyAPIPlus", "-config", "config/cliproxyapi.yaml"]
