feat(security): add baseline secret hygiene checks
Why this change was needed:
The repository needed stronger defaults to prevent accidental secret leakage and weak local auth file permissions.

What changed:
Added scripts/security_check.sh to detect tracked sensitive files, permissive secret file modes, and missing ignore rules. Expanded .gitignore with common secret file patterns and private directories. Added README guidance for running security checks and updated plan status for completed P2 work.

Problem solved:
Developers now have automated baseline checks and safer ignore defaults that reduce credential exposure risk in local and CI workflows.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,14 @@ auths/
 # Local-only config/secrets
 .env
 .env.*
+*.pem
+*.key
+*.p12
+*.pfx
+*.kdbx
+*.token
+secrets/
+private/
 config/routertool.yaml
 config/cliproxyapi.yaml
 config/auths/
