fix(config): centralize service default ports and readiness paths
Why this change was needed:
Default host/port/readiness values were duplicated across CLI logic, smoke scripts,
example config, and tests. This caused drift and false failures in smoke checks
when one location changed but others did not.

What changed:
- Added src/llm_router/constants.py as the single source for default host, service
  ports, and readiness paths
- Updated health command and smoke script fallback logic to use shared constants
- Updated smoke diagnostics to resolve service ports from router config instead of
  hardcoded values
- Aligned example router readiness paths with actual reachable endpoints
- Refactored tests to consume shared constants and added defaults-sync tests to
  enforce config/constants consistency

Problem solved:
Port and readiness defaults now have one canonical definition. Runtime checks,
smoke validation, and test fixtures stay aligned, reducing configuration drift
and preventing regressions from hardcoded endpoint mismatches.

--- a/config/examples/routertool.yaml
+++ b/config/examples/routertool.yaml
@@ -10,7 +10,7 @@
     "litellm": {
       "host": "127.0.0.1",
       "port": 4000,
-      "readiness_path": "/v1/models",
+      "readiness_path": "/health",
       "command": {
         "cwd": "..",
         "args": [".router/runtime/bin/litellm", "--config", ".router/runtime/litellm.active.yaml"]
@@ -19,7 +19,7 @@
     "cliproxyapi_plus": {
       "host": "127.0.0.1",
       "port": 8317,
-      "readiness_path": "/v1/models",
+      "readiness_path": "/",
       "command": {
         "cwd": "..",
         "args": [".router/runtime/bin/CLIProxyAPIPlus", "-config", "config/cliproxyapi.yaml"]
