feat(auth): add unified auth.providers schema with oauth compatibility
Why this change was needed:
- Auth configuration was centered on oauth only, which is too narrow for future auth methods.
- We need a unified schema that can represent provider capabilities while keeping existing configs working.

What changed:
- Added top-level auth schema support with auth.providers in config loader.
- Added normalization between legacy oauth and new auth.providers for backward compatibility.
- Added validation for auth.providers provider mappings.
- Updated example router config to use auth.providers with oauth_poll method metadata.
- Added regression test for loading the new auth schema.

Problem solved:
- Config now supports an extensible auth schema without breaking existing oauth-based setup.

--- a/config/examples/routertool.yaml
+++ b/config/examples/routertool.yaml
@@ -82,14 +82,18 @@
       }
     }
   },
-  "oauth": {
-    "codex": {
-      "auth_url_endpoint": "http://127.0.0.1:8317/v0/management/oauth/codex/auth-url",
-      "status_endpoint": "http://127.0.0.1:8317/v0/management/oauth/codex/status"
-    },
-    "copilot": {
-      "auth_url_endpoint": "http://127.0.0.1:8317/v0/management/oauth/github-copilot/auth-url",
-      "status_endpoint": "http://127.0.0.1:8317/v0/management/oauth/github-copilot/status"
+  "auth": {
+    "providers": {
+      "codex": {
+        "method": "oauth_poll",
+        "auth_url_endpoint": "http://127.0.0.1:8317/v0/management/oauth/codex/auth-url",
+        "status_endpoint": "http://127.0.0.1:8317/v0/management/oauth/codex/status"
+      },
+      "copilot": {
+        "method": "oauth_poll",
+        "auth_url_endpoint": "http://127.0.0.1:8317/v0/management/oauth/github-copilot/auth-url",
+        "status_endpoint": "http://127.0.0.1:8317/v0/management/oauth/github-copilot/status"
+      }
     }
   },
   "secret_files": [
