refactor(branding): rename llm-router project to flowgate
Why this change was needed:
The project needed a stronger, brand-first identity aligned with the new name FlowGate.
A full rename was required so operators and contributors use one consistent command,
package namespace, and config path without legacy naming drift.

What changed:
- Renamed Python package path from src/llm_router to src/flowgate.
- Renamed CLI command and project metadata from llm-router to flowgate.
- Renamed sample config from config/examples/routertool.yaml to config/examples/flowgate.yaml.
- Updated default CLI config path to config/flowgate.yaml.
- Updated tests, scripts, CI workflow, docs, and repository guidelines to the new naming.
- Regenerated lock metadata to reflect the new package name.

Problem solved:
All user-facing and developer-facing entry points now consistently use FlowGate.
The old llm-router command/package path is removed, and verification confirms the
new command, tests, and support scripts work with the renamed structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
 
       - name: CLI static checks
         run: |
-          uv run llm-router --help
-          uv run llm-router bootstrap --help
-          uv run llm-router auth codex --help
+          uv run flowgate --help
+          uv run flowgate bootstrap --help
+          uv run flowgate auth codex --help
