feat(config): add upstream credential refs and port conflict checks
Why this change was needed:
- Environment-variable based upstream keys become ambiguous when multiple providers are configured.
- Service start and restart previously did not fail fast when the target port was already occupied.
- cliproxyapi port usage needed to be normalized to 8317 across examples and integration docs to avoid drift.

What changed:
- Added new top-level config schema credentials.upstream.<name>.file with validation in src/flowgate/config.py.
- Added api_key_ref resolution during profile activation in src/flowgate/profile.py, reading key material from credential files and writing resolved api_key into active runtime config.
- Added doctor check doctor:upstream_credentials in src/flowgate/cli.py to catch missing refs, files, and empty files.
- Added port-availability guard before service start and restart when service is not already running, returning non-zero with reason=port-in-use.
- Updated docs and examples to use credential files for cliproxy upstream key and standardized cliproxyapi port to 8317.
- Added and updated tests for config schema, api_key_ref resolution, doctor credential failures, and port-in-use failures.

Problem solved:
- FlowGate now supports scalable multi-upstream key management without env-var name collisions for cliproxy-backed routes.
- Operators get explicit preflight failures for occupied ports instead of opaque startup issues.
- Port and credential guidance are consistent with runtime behavior, reducing misconfiguration risk.

--- a/config/examples/flowgate.yaml
+++ b/config/examples/flowgate.yaml
@@ -26,6 +26,13 @@
       }
     }
   },
+  "credentials": {
+    "upstream": {
+      "cliproxy_default": {
+        "file": "../.router/secrets/upstream_cliproxyapi_api_key"
+      }
+    }
+  },
   "litellm_base": {
     "model_list": [
       {
@@ -33,7 +40,7 @@
         "litellm_params": {
           "model": "openai/router-default",
           "api_base": "http://127.0.0.1:8317/v1",
-          "api_key": "os.environ/ROUTER_UPSTREAM_API_KEY"
+          "api_key_ref": "cliproxy_default"
         }
       },
       {
