--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.12,<3.14"
-dependencies = []
+dependencies = ["litellm[proxy]==1.75.8"]
 
 [project.scripts]
 flowgate = "flowgate:main"
 
 [dependency-groups]
-runtime = [
-    "litellm[proxy]==1.75.8",
-]
-test = [
-    "pytest>=8.3.0,<9",
-    "pytest-cov>=5.0.0,<6",
-]
+test = ["pytest>=8.3.0,<9", "pytest-cov>=5.0.0,<6"]
 
 [build-system]
 requires = ["uv_build>=0.10.2,<0.11.0"]
