feat(config): add deprecation warning for config_version 1
Why this change was needed:
Config version 1 is deprecated and will be removed in v0.3.0. Users need
clear warnings and guidance to migrate their configurations.

What changed:
- Added deprecation detection in _normalize_legacy_fields()
- Warning displays on stderr with migration instructions
- Lists specific legacy fields detected (oauth, secrets, cliproxyapi)
- Non-blocking warning allows continued operation
- Added 4 new tests for deprecation warning behavior

Problem solved:
Users are now informed about deprecated config and have clear path to migrate.
Prepares codebase for clean removal of v1 support in v0.3.0.

Test results: 191/191 passing

--- a/config/examples/cliproxyapi.yaml
+++ b/config/examples/cliproxyapi.yaml
@@ -1,3 +1,7 @@
+# CLIProxyAPIPlus Configuration
+# This config is for the CLIProxyAPIPlus service (OAuth-backed providers)
+# See: https://github.com/your-org/CLIProxyAPIPlus
+
 host: "127.0.0.1"
 port: 8317
 auth-dir: "./.router/auths"
