chore: update pre-commit hooks and add pyupgrade
What changed:
- Bump minimum_pre_commit_version to 5.0.0
- Bump pre-commit-hooks to v6.0.0
- Bump ruff-pre-commit to v0.15.0 with import sorting enabled
- Add pyupgrade hook targeting Python 3.12+

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
-minimum_pre_commit_version: "3.7.0"
+minimum_pre_commit_version: "5.0.0"
 default_language_version:
   python: python3.12
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
       - id: check-merge-conflict
       - id: end-of-file-fixer
@@ -14,8 +14,17 @@ repos:
       - id: check-toml
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.6
+    rev: v0.15.0
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [--fix,--select, I ]
+        types_or: [ python, pyi ]
       - id: ruff-format
+        types_or: [ python, pyi ]
+  # automatically upgrade syntax for newer versions of the language.
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.21.2
+    hooks:
+        - id: pyupgrade
+          args: [--py312-plus]
+
